--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ inputs:
     default: ${{ github.workspace }}
 runs:
   using: 'docker'
-  image: 'antegulin/protodist:0.0.4'
+  image: 'docker://antegulin/protodist:0.0.4'
   env:
     PROTODIST_BRANCH: ${{inputs.branch}}
     PROTODIST_TAG: ${{inputs.tag}}
