--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'docker://antegulin/protodist:0.0.4'
+  entrypoint: 'protodist'
   env:
     PROTODIST_BRANCH: ${{inputs.branch}}
     PROTODIST_TAG: ${{inputs.tag}}
