--- a/action.yml
+++ b/action.yml
@@ -30,10 +30,10 @@ runs:
   using: docker
   image: 'docker://antegulin/protodist:v0.1.0-alpha-rc10'
   pre-entrypoint: 'pre-entrypoint.sh'
-  env:
-    PROTODIST_GIT_BRANCH: ${{inputs.branch}}
-    PROTODIST_GIT_TAG: ${{inputs.tag}}
-    PROTODIST_DIR: ${{inputs.proto_dir}}
-    PROTODIST_GIT_USER: ${{inputs.git_user}}
-    PROTODIST_GIT_ACCESS_TOKEN: ${{inputs.git_access_token}}
-    PROTODIST_PROTO_IMPORT_PATH: ${{inputs.proto_import_path}}
+  args:
+    - "--git_branch ${{inputs.branch}}"
+    - "--git_tag ${{inputs.tag}}"
+    - "--proto_dir ${{inputs.proto_dir}}"
+    - "--git_user ${{inputs.git_user}}"
+    - "--git_access_token ${{inputs.git_access_token}}"
+    - "--proto_import_path ${{inputs.proto_import_path}}"
