--- a/action.yml
+++ b/action.yml
@@ -28,8 +28,8 @@ inputs:
     required: false
 runs:
   using: docker
-  image: 'docker://antegulin/protodist:v0.1.0-alpha-rc11'
-  entrypoint: "entrypoint.sh"
+#  image: 'docker://antegulin/protodist:v0.1.0-alpha-rc11'
+  image: 'Dockerfile'
   env:
     PROTODIST_GIT_USER: ${{inputs.git_user}}
     PROTODIST_GIT_BRANCH: ${{inputs.git_branch}}
